ghc-4335c07/testsuite/tests/typecheck/should_fail/T14232.hs
module T14232 where

f :: (String -> a) String -> a
f g s = g s
